--- a/TestBlazorApp/Components/Pages/Error.razor
+++ b/TestBlazorApp/Components/Pages/Error.razor
@@ -32,7 +32,9 @@
     private string? RequestId { get; set; }
     private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
 
-    protected override void OnInitialized() =>
+    protected override void OnInitialized()
+    {
         RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
+    }
 
 }
